<resources>
    <string name="app_name">Hogwarts Selection</string>
    <string name="welcome">Welcome to Hogwarts</string>
    <string name="add_name">Add your name</string>
    <string name="choice">Choose a house</string>
    <array name="houses">
        <item>Gryffindor</item>
        <item>Hufflepuff</item>
        <item>Ravenclaw</item>
        <item>Slytheryn</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">What is your name?</string>
    <string name="name_enter">Enter your name</string>
    <string name="cancel">Cancel</string>
</resources>